Depuracion de codigo segun Sonarlint